<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.polar.androidblesdk.OptionVsActivity">

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/broadcast_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/listen_broadcast" />

        <Button
            android:id="@+id/auto_connect_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auto_connect_toggle" />

        <Button
            android:id="@+id/scan_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan_devices" />

        <Button
            android:id="@+id/connect_vs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect_to_veritysense" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="2dp"
            android:background="@android:color/white" />

        <Button
            android:id="@+id/hr_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_hr_stream" />

        <Button
            android:id="@+id/ecg_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_ecg_stream" />

        <Button
            android:id="@+id/acc_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_acc_stream" />

        <Button
            android:id="@+id/gyr_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_gyro_stream" />

        <Button
            android:id="@+id/mag_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_mag_stream" />

        <Button
            android:id="@+id/ohr_ppg_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_ppg_stream" />

        <Button
            android:id="@+id/ohr_ppi_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_ppi_stream" />

        <Button
            android:id="@+id/graphics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mostra_grafici" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="2dp"
            android:background="@android:color/white" />


        <Button
            android:id="@+id/toggle_SDK_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_sdk_mode" />

    </LinearLayout>
</ScrollView>