<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.polar.androidblesdk.MainActivity">

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/broadcast_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/listen_broadcast" />
        <Button
            android:id="@+id/auto_connect_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auto_connect_toggle" />

        <Button
            android:id="@+id/scan_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan_devices" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="2dp"
            android:background="@android:color/white" />



        <Button
            android:id="@+id/connect_h10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect_to_h10" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="2dp"
            android:background="@android:color/white" />

        <Button
            android:id="@+id/start_h10_recording"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_hr_stream" />

        <Button
            android:id="@+id/ecg_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_ecg_stream" />

        <Button
        android:id="@+id/graphics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mostra_grafici" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="2dp"
            android:background="@android:color/white" />

        <Button
           android:id="@+id/write_exercises"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/scrivi_exercises"
           tools:ignore="InvalidId" />

        <Button
            android:id="@+id/list_exercises"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_exercises" />


        <Button
            android:id="@+id/remove_exercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_exercise" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="2dp"
            android:background="@android:color/white" />

        <Button
            android:id="@+id/toggle_SDK_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_sdk_mode" />

    </LinearLayout>
</ScrollView>