<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.polar.androidblesdk.MainActivity">

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <Button
            android:id="@+id/see_vs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/see_options_vs" />


        <Button
            android:id="@+id/see_h10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/see_options_h10" />

        <Button
            android:id="@+id/parametri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parametri" />

        <Button
            android:id="@+id/notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notifiche" />
    </LinearLayout>
</ScrollView>