<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.polar.androidblesdk.MainActivity">

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="257dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="48dp"
            android:text="@string/parameters"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/pression"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pressione" />

        <Button
            android:id="@+id/diabete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diabete" />

        <Button
            android:id="@+id/graphics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mostra_grafici" />

    </LinearLayout>
</ScrollView>